B (1088) nedmalloc aborted on Mac OS X when thread id had high bit set
B [master 933d227] Fixed Visual Studio 2010 support (it was very broken) as well as
fixing compilation errors on POSIX for GCC v4.4.5. For some odd reason there is
still a segfault on process init on Linux whereas on Windows there are checked
iterator exceptions tripping due to new checking in VS2010.
B [master xxxxxxx] Fixed a long standing bug in AllTests, the automated test runner,
whereby it choked if the test apps outputted more data than fitted into pipe's buffer.
A handy side effect is that running the automated test suite is now VERY considerably
faster!

* (1089) Bumped TnFOX to v0.89
* (1089) Updated to use OpenSSL v1.0
* (1089) Updated to use scons v1.2 (Python v2.6)
* (1089) Extended MSVC build system to enable use of SSE3 and SSE4 intrinsics.
* (1090) Replaced Maths::VectorArray with Maths::Array and Maths::Matrix. Also
fixed some silly SSE3 and SSE4 compilation errors :( Disabled global memory
allocator replacement on Mac OS X as the 10.5 system allocator is faster in
every way. Added aligned memory allocation plus aligned_allocator<> STL allocator.
+ (1091) Added VIEWER_NICEST and VIEWER_LEFTZOOMS options to FXGLViewer.
+ (1092) Moved all the OpenGL FOX code into the graphing module. Added FXGLCircle.
+ (1093) Added FOX FXVecXX and FXMatXX interoperability to Maths::Vector and
Maths::Matrix. SSE but non-SSE3 sum() now runs much faster, and Maths::Matrix<float,4>
multiply is several times faster than FOX's FXMat4f.
* (1094-1117) Much work invested into nedmalloc which can now patch itself in to
replace the system allocator.
+ (1142) Added FXProcess::processMemoryUsage()
+ (1144) Added typeof() implementation for MSVC.
* (1145) Ripped out much of the former allocator support code now that nedmalloc
can patch itself in instead of the system allocator. Added new memory leak detection
and reporting under debug builds.